buildscript {
	ext {
		liferayGradlePluginVersion = "13.0.16"
	}
	repositories {
		mavenLocal()
		mavenCentral()
		maven { url "https://repository.liferay.com/nexus/content/groups/public" }
	}
	dependencies {
		classpath group: "com.liferay", name: "com.liferay.gradle.plugins", version: liferayGradlePluginVersion
	}
}

apply plugin: "com.liferay.plugin"
apply plugin: "java"

group = "com.circulo.auth0"
version = "1.0.0"

repositories {
	mavenLocal()
	mavenCentral()
	maven { url "https://repository.liferay.com/nexus/content/groups/public" }
}

dependencies {
	// API DXP alineada con Liferay DXP 7.3.10 U32 (Maven Central: release.dxp.api).
	compileOnly "com.liferay.portal:release.dxp.api:7.3.10.u32"
	// Anotaciones @Meta.OCD (Metatype); no van en el bundle; Bnd las procesa al empaquetar.
	compileOnly "biz.aQute.bnd:biz.aQute.bnd.annotation:5.2.0"

	compileOnly "org.osgi:org.osgi.service.component.annotations:1.3.0"
	compileOnly "org.osgi:org.osgi.service.metatype.annotations:1.4.0"
	compileOnly "javax.ws.rs:javax.ws.rs-api:2.1.1"

	// JWT RS256 + JWKS (incluidas en el JAR del módulo). JARs multi-release: ver -fixupmessages en bnd.bnd.
	compileInclude group: "com.auth0", name: "java-jwt", version: "3.19.4"
	compileInclude group: "com.auth0", name: "jwks-rsa", version: "0.22.1"
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

tasks.withType(JavaCompile) {
	options.encoding = "UTF-8"

	if (JavaVersion.current().isJava9Compatible()) {
		options.release = 8
	}
}

// cleanWrapper intenta borrar gradle-wrapper.jar durante clean; en Windows el JAR está bloqueado por el propio Gradle.
afterEvaluate {
	tasks.findByName("cleanWrapper")?.enabled = false
}
